@@ -18,8 +18,13 @@ function areyousure()
 				<th><?php echo lang('name');?></th>
 				<th style="width:60px;"><?php echo lang('price');?></th>
 				<th style="width:60px;"><?php echo lang('saleprice');?></th>
-				<th style="width:60px;"><?php echo lang('enabled');?></th>
+				<?php if($this->config->item('inventory_enabled')) : ?>
+				<th style="width:60px;"><?php echo lang('add_inventory');?></th>
+				<th style="width:60px;"><?php echo lang('item_cost');?></th>
+				<?php else : ?>
 				<th style="width:60px;"><?php echo lang('availability');?></th>
+				<?php endif; ?>
+				<th style="width:60px;"><?php echo lang('enabled');?></th>
 				<th class="gc_cell_right"></th>
 			</tr>
 		</thead>
@@ -31,16 +36,23 @@ function areyousure()
 				<td><?php echo form_input(array('name'=>'product['.$product->id.'][name]','value'=>form_decode($product->name), 'class'=>'gc_tf3'));?></td>
 				<td><?php echo form_input(array('name'=>'product['.$product->id.'][price]', 'value'=>set_value('price', $product->price), 'class'=>'gc_tf3'));?></td>
 				<td><?php echo form_input(array('name'=>'product['.$product->id.'][saleprice]', 'value'=>set_value('saleprice', $product->saleprice), 'class'=>'gc_tf3'));?></td>
+				
+				<?php if($this->config->item('inventory_enabled')) : ?>
 				<td>
 					<?php
-					 	$options = array(
-			                  '1'	=> lang('enabled'),
-			                  '0'	=> lang('disabled')
-			                );
-
-						echo form_dropdown('product['.$product->id.'][enabled]', $options, set_value('enabled',$product->enabled));
+					$data = array( 'id' => 'inventory_qty', 'name' => 'inv['.$product->id.'][qty]', 'class'=>'gc_tf3' );
+					echo form_input($data);
 					?>
 				</td>
+				<td>
+					<?php
+					$data = array( 'id' => 'inventory_cost', 'name' => 'inv['.$product->id.'][cost]', 'class'=>'gc_tf3' );
+					echo form_input($data);
+					?>
+				</td>
+				<?php endif; ?>
+				
+				<?php if( ! $this->config->item('inventory_enabled')) : ?>
 				<td>
 					<?php
 					 	$options = array(
@@ -49,6 +61,17 @@ function areyousure()
 			                );
 
 						echo form_dropdown('product['.$product->id.'][in_stock]', $options, set_value('in_stock',$product->in_stock));
+					?>
+				</td>
+				<?php endif ?>
+				<td>
+					<?php
+					 	$options = array(
+			                  '1'	=> lang('enabled'),
+			                  '0'	=> lang('disabled')
+			                );
+
+						echo form_dropdown('product['.$product->id.'][enabled]', $options, set_value('enabled',$product->enabled));
 					?>
 				</td>
 				<td class="gc_cell_right list_buttons">
